[package]
name = "ntest"
version = "0.1.0"
authors = ["Armin Becher <becherarmin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "unwind"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro-rules = "0.2.1"
quote = "0.6"
proc-macro2 = "0.4"
syn = "0.15"
