[package]
name = "ntest"
version = "0.1.2"
authors = ["Armin Becher <becherarmin@gmail.com>"]
edition = "2018"
description = "Testing framework for rust which enhances the built-in library with some useful features."
keywords = ["test", "tests", "unit", "testing"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://gitlab.com/becheran/ntest"
documentation = "https://docs.rs/ntest"

[badges]
gitlab = { repository = "https://gitlab.com/becheran/ntest", branch = "master" }
maintenance = { status = "actively-developed" }

[profile.dev]
panic = "unwind"

[lib]
path = "src/lib.rs"


[dependencies]
ntest_test_cases = { version = "0.1.2", path = "../ntest_test_cases" }

[dev-dependencies]
ntest_test_cases = { version = "0.1.2", path = "../ntest_test_cases" }