[package]
name = "ntest"
version = "0.2.1"
authors = [ "Armin Becher <becherarmin@gmail.com>",]
edition = "2018"
description = "Testing framework for rust which enhances the built-in library with some useful features."
keywords = [ "test", "tests", "unit", "testing",]
categories = [ "development-tools", "development-tools::testing",]
readme = "README.md"
license-file = "LICENSE"
repository = "https://gitlab.com/becheran/ntest"
documentation = "https://docs.rs/ntest"

[lib]
path = "src/lib.rs"

[badges.gitlab]
repository = "becheran/ntest"
branch = "master"

[badges.maintenance]
status = "actively-developed"

[profile.dev]
panic = "unwind"

[dependencies.ntest_test_cases]
version = "0.2.1"
path = "../ntest_test_cases"

[dev-dependencies.ntest_test_cases]
version = "0.2.1"
path = "../ntest_test_cases"

[dependencies.ntest_timeout]
version = "0.2.1"
path = "../ntest_timeout"

[dev-dependencies.ntest_timeout]
version = "0.2.1"
path = "../ntest_timeout"
