[package]
name = "ntest_timeout"
version = "0.3.2"
authors = [ "Armin Becher <armin.becher@gmail.com>",]
edition = "2018"
description = "Timeout attribute for the ntest framework."
keywords = [ "test", "tests", "unit", "testing", "timeout",]
categories = [ "development-tools", "development-tools::testing",]
readme = "README.md"
license-file = "LICENSE"
repository = "https://gitlab.com/becheran/ntest"
documentation = "https://docs.rs/ntest"

[lib]
name = "ntest_timeout"
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
timebomb = "0.1.2"
ntest = "0.*"

[dependencies.syn]
version = "1.0"
features = [ "full",]
