[package]
name = "ntest_timeout"
version = "0.6.0"
authors = [ "Armin Becher <armin.becher@gmail.com>",]
edition = "2018"
description = "Timeout attribute for the ntest framework."
keywords = [ "test", "tests", "unit", "testing", "timeout",]
categories = [ "development-tools", "development-tools::testing",]
readme = "README.md"
license = "MIT"
repository = "https://github.com/becheran/ntest"
documentation = "https://docs.rs/ntest"

[lib]
name = "ntest_timeout"
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "0.1.4"

[dependencies.syn]
version = "1.0"
features = [ "full",]

[dependencies.ntest_proc_macro_helper]
version = "0.6.0"
path = "../ntest_proc_macro_helper"
