[package]
name = "ntest_timeout"
version = "0.9.0"
authors = [ "Armin Becher <armin.becher@gmail.com>",]
edition = "2018"
description = "Timeout attribute for the ntest framework."
keywords = [ "test", "tests", "unit", "testing", "timeout",]
categories = [ "development-tools", "development-tools::testing",]
readme = "README.md"
license = "MIT"
repository = "https://github.com/becheran/ntest"
documentation = "https://docs.rs/ntest"

[lib]
name = "ntest_timeout"
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = ">=1.1,<=2"

[dependencies.syn]
version = "1.0"
features = [ "full",]
